gplazma: fix broken commit d74d9568167f4
java17 is not allowed

(cherry picked from commit 7a2bfe0a2f2db70a388af1fce23034dcc2877540)
Signed-off-by: Tigran Mkrtchyan <tigran.mkrtchyan@desy.de>